# claim-extraction-rag

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
.dvc/: config
.github/workflows/: claim-prioritizer-ci.yaml
data/: .gitignore  checkworthiness_dataset.tsv.dvc  claim_dataset.tsv.dvc
src/engine/: generator.py  retriever.py
src/ingestion/: ingest.py
src/interface/: dashboard.py
src/server/: api.py
