[project]
name = "claim-extraction-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.0.0",
    "dvc>=3.66.1",
    "dvc-gdrive>=3.0.1",
    "fastapi>=0.129.0",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.0",
    "loguru>=0.7.3",
    "pandas>=2.2.3,<3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ruff>=0.15.1",
    "sentence-transformers>=5.2.3",
    "streamlit>=1.40.0",
]
